--- a/package.json
+++ b/package.json
@@ -17,5 +17,9 @@
     "mongoose": "^7.1.0",
     "nodemon": "^2.0.22",
     "yarn": "^1.22.19"
+  },
+  "engines" : { 
+    "npm" : ">=8.0.0 <9.0.0",
+    "node" : ">=16.0.0 <17.0.0"
   }
 }
