--- a/package.json
+++ b/package.json
@@ -15,8 +15,7 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.1.0",
-    "nodemon": "^2.0.22",
-    "yarn": "^1.22.19"
+    "nodemon": "^2.0.22"
   },
   "engines" : { 
     "npm" : ">=8.0.0 <9.0.0",
